Blog/static/Blog/main.css
html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
}
body {
    display: flex;
    flex-direction: column;
    background: #f7f7f7;
    color: #18121e;
    margin-top: 5rem;
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    overflow-wrap: break-word;
}
a {
    color: #337ab7;
}
p {
    font-family: "Roboto", sans-serif;
    color: #0a1612;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    color: #18121e;
    font-family: "Lato";
}
img {
    max-width: 100%;
    height: auto;
}
ul {
    margin: 0;
}
kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
    color: #333;
    display: inline-block;
    font-size: .85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}
.fa-heart {
    color: red;
}
.btn {
    white-space: nowrap;
}
.container-fluid {
    padding-left: 0;
    padding-right: 0;
}
#brand {
    display: block;
    margin-top: auto;
    margin-bottom: auto;
}
.navbar-color,
footer {
    /* background-color: #5f788a; */
    background-color: #192231;
}
.site-header .navbar-nav .nav-link {
    font-family: "Rubik", sans-serif;
    font-weight: 900;
    color: #cbd5db;
    margin-left: 1rem !important;
    margin-right: 1rem !important;
}
.site-header .navbar-nav .nav-link:hover {
    color: #ffffff;
}
.site-header .navbar-nav .nav-link.active {
    font-weight: 500;
}
.dropbtn {
    background-color: transparent;
    /* color: #cbd5db; */
    padding: 16px;
    font-size: 16px;
    border: none;
}
.user-image {
    height: 20px;
    width: 25px;
    cursor: pointer;
}
.dropdown {
    position: relative;
    display: inline-block;
}
a.dropdown-toggle {
    color: black;
}
.dropdown-menu {
    display: none;
    position: absolute;
    background-color: #fafafa;
    /* min-width: 160px; */
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    text-align: left;
    /* width: 100%; */
    overflow: auto;
}
#dropdown .dropdown-menu .nav-link {
    color: #444444;
}
.dropdown-menu .nav-link:hover {
    font-weight: 700;
}
#main {
    margin: 1rem;
    padding: 0.5rem 1rem;
}
#sidebar {
    height: max-content;
}
.list-group-item.active {
    border-color: rgba(0, 0, 0, 0.125);
}
#latest-posts,
#trending-posts {
    border-top: none;
}
.content-section {
    background: #ffffff;
    padding: 10px 10px;
    border: 1px solid #dddddd;
    border-radius: 3px;
    margin-bottom: 2px;
}
.article-title {
    font-weight: 600;
    color: #444444;
}
.article-image {
    max-width: 60%;
}
.article-image>img {
    max-width: 100%;
}
footer .row {
    display: flex;
    flex-direction: row;
    width: 100%;
    padding: 15px;
    margin-top: 5px;
}
footer .col {
    display: flex;
    flex-direction: column;
    flex: 1;
    margin: 5px;
}
#email {
    width: 70%;
}
footer h5,
footer h6,
footer p,
footer a,
footer .fa-envelope {
    color: #f2f4f6 !important;
}
footer .fa {
    font-size: 1.2rem;
}
.about-page-kids {
    display: block;
    max-width: 100%;
    margin: 5px auto;
}
a.article-title:hover {
    color: #34a1d4;
    text-decoration: none;
}
.article-short-des p {
    display: inline;
}
.article-short-des {
    display: inline;
    overflow-wrap: break-word;
}
.article-content {
    /* white-space: pre-line; */
    overflow-wrap: break-word;
    line-height: 2;
}

/* forcing any image passed from the backend to stay inside the container */

.article-content img,
.article-short-des img {
    display: block;
    max-width: 100% !important;
    height: auto;
    margin: 5px auto;
}
.article-img {
    height: 65px;
    width: 65px;
    margin-right: 16px;
    float: left;
}
.article-metadata {
    padding-bottom: 2px;
    margin-bottom: 5px;
    border-top: 1px solid #e3e3e3;
    margin-left: 5px;
}
.article-metadata a:hover {
    color: #333;
    text-decoration: none;
}
.article-svg {
    width: 25px;
    height: 25px;
    vertical-align: middle;
}
.account-img {
    height: 125px;
    width: 125px;
    margin-right: 20px;
    margin-bottom: 16px;
}
#post-detail {
    padding: 1rem !important;
}
#post-detail .article-metadata {
    padding-bottom: 1px;
    margin-bottom: 4px;
    border-bottom: 1px solid #e3e3e3;
    border-top: none;
}
.article-tags {
    display: inline-block;
    padding: 0.4em 0.5em;
    margin: 0.5rem 2px 0.5rem 0;
    font-size: 15px;
    line-height: 1;
    white-space: nowrap;
    text-decoration: none;
    text-align: center;
    border-width: 1px;
    border-style: solid;
    border-radius: 3px;
    transition: all 0.15s ease-in-out;
    /* color: #39739d; */
    color: #142d40;
    /* background-color: #E1ECF4;
border-color: #E1ECF4; */
    background-color: #a5a5af4a;
    border-color: #e1eef4;
}
.profile {
    background-color: aliceblue;
    display: flex;
    flex-direction: row;
}
.profile>* {
    margin: 1rem;
}
.avatar {
    max-height: 300px;
    max-width: 300px;
    text-align: center;
    flex: 2;
}
.avatar img {
    max-height: 100%;
    max-width: 100%;
    /* vertical-align: middle; */
}
.author-info {
    flex: 2;
}
.author-name {
    font-weight: 900;
}
.author-profile-info {
    flex: 1;
    overflow: hidden;
}
.truncate-string-parent {
    overflow: hidden;
}
.truncate-string {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
#response {
    font-size: 0.9rem;
    position: fixed;
    top: 70px;
    left: 28%;
    opacity: 0.9;
    z-index: 1030;
}
#post-options {
    display: inline-block;
}
#article-share-container {
    display: flex;
    flex-direction: column;
}

/* This is the parent container that contains all meta data and the contents of the article */

.article-list>*>.article-contents,
.article-card>*>.article-contents {
    margin-left: 1rem;
}
#share {
    text-align: center;
    position: fixed;
    top: 30%;
    /* TODO fix it later. */
    left: 2%;
    display: inline-block;
}
/* ... */

